feat：添加prettier 文章

--- a/notes/Note/006.md
+++ b/notes/Note/006.md
@@ -15,9 +15,7 @@
 ## `AJAX `请求不能发送
 
 > 有三个标签是允许跨域加载资源：
-> `<img src=XXX>`
-> `<link href=XXX>`
-> `<script src=XXX>`
+> `<img src=XXX>` > `<link href=XXX>` > `<script src=XXX>`
 
 ### 1）通过 jsonp 跨域
 
