--- a/blog/2022-12-26-window.navigator.clipboard.md
+++ b/blog/2022-12-26-window.navigator.clipboard.md
@@ -5,9 +5,10 @@ authors: Jeffrey
 tags: [window, js, navigator, copy]
 ---
 
-- 原生提供的复制文本api
+- 原生提供的复制文本 api
+
 ```js
-window.navigator.clipboard.writeText("test").then((_res) => {
+window.navigator.clipboard.writeText('test').then((_res) => {
   //
 })
 ```
